<resources>
    <string name="app_name">Gopi Music Player</string>
    <string name="gopi_music_player">GOPI MUSIC PLAYER</string>
    <string name="app_tag_line">Hear it. See it. Live it</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play</string>
    <string name="hamari_aduri_kahani_mp3">Hamari aduri kahani.mp3</string>
    <string name="artist">Ankit vishnoi</string>
    <string name="song">Songs</string>
    <string name="all_songs">All Songs</string>
    <string name="recently_heard">Recently Heard</string>
    <string name="blended_family">Blended Family</string>
    <string name="now_playing">Now Playing</string>
    <string name="drake">Drake</string>
</resources>
