<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#eceff1">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_3"
            >
            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_19"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/buger"
                    />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song"
                android:textSize="@dimen/progress_bar_size"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:textColor="@color/status_bar_color"
                />
            <ImageView
                android:layout_width="@dimen/space_25"
                android:layout_height="@dimen/space_25"
                android:layout_centerVertical="true"
                android:src="@drawable/search"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/spacing_8"
                />
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:id="@+id/llRecentAdded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/spacing_8"
        android:layout_marginRight="@dimen/spacing_8"
        android:layout_marginTop="@dimen/spacing_8"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recently_heard"
            android:textSize="@dimen/text_size_extra_large"
            android:textColor="@color/black"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvRecentHeardSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llAllSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llRecentAdded"
        android:layout_marginLeft="@dimen/spacing_8"
        android:layout_marginRight="@dimen/spacing_8"
        android:layout_marginTop="@dimen/spacing_8"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_songs"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_extra_large"
            android:textColor="@color/black"

            />

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvListSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llAllSong"
        android:layout_margin="@dimen/spacing_8"
        >
    </android.support.v7.widget.RecyclerView>
    <SeekBar
        android:id="@+id/sbMusicProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/spacing_4"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_alignParentBottom="true"
        app:layout_behavior="@string/bottom_sheet_behavior">
        <include layout="@layout/bottom_sheet_content_view" />
    </FrameLayout>


</RelativeLayout>