<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SongActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarsong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/tvNowPlaying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/now_playing"
            android:textColor="@color/black"
            android:textSize="@dimen/spacing_24" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/llcross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbarsong"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_18">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/letter_x" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCircularArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llcross"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_32">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSongAndArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/llCircularArtist"
        android:layout_marginTop="@dimen/spacing_8"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:id="@+id/tvArtistSongActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/blended_family"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/spacing_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/drake"
            android:textColor="@color/grey_art"
            android:textSize="20sp"
            android:layout_marginLeft="45dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llSongButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/spacing_80"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/ivPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginRight="@dimen/spacing_27"
            android:layout_marginEnd="@dimen/font_27"
            android:src="@drawable/if_003___rewind_2949785"
            />
        <ImageView
            android:id="@+id/ivSongPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/if_001___play_2949783"
            android:visibility="visible"
            />
        <ImageView
            android:id="@+id/ivSongPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/if_004___pause_2949786"
            android:visibility="gone"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/if_002___fast_forward_2949784"
            android:layout_marginLeft="@dimen/spacing_27"
            android:layout_marginStart="@dimen/font_27"
            />

    </LinearLayout>
    <SeekBar
        android:id="@+id/seekBar_luminosite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:progress="50"
        android:progressDrawable="@drawable/seekbar_style"
        android:thumb="@drawable/custom_thumb" />
</RelativeLayout>